# lsb-release-rs

./: Cargo.toml
src/: args.rs  lsb_release.rs  main.rs
src/lsb_release/: get.rs  imp.rs
src/lsb_release/imp/: apt.rs  dist.rs  lsb.rs
