[package]
name = "lsb-release-rs"
version = "0.1.0"
edition = "2021"
description = "This crate is ported version of lsb_release(1)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
fancy-regex = "0.10.0"
