[package]
name = "lsb-release-rs"
version = "0.1.0"
edition = "2021"
description = "This crate is ported version of lsb_release(1)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
csv = "1.1.6"
fancy-regex = "0.10.0"
once_cell = "1.12.0"
serde = { version = "1.0.137", features = ["derive"] }
tap = "1.0.1"
uname-rs = "0.1.1"
voca_rs = "1.14.0"
